add and edit room

--- a/ClientApp/src/app/Components/fetch-room/fetch-room.component.html
+++ b/ClientApp/src/app/Components/fetch-room/fetch-room.component.html
@@ -18,6 +18,7 @@
     <td>{{ room.roomID }}</td>
     <td>
     <td>
+      <a [routerLink]="['/room/edit/', room.roomID]">Edit</a> | 
       <a [routerLink]="" (click)="delete(room.roomID)">Delete</a>
     </td>
   </tr>
