--- a/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -7,7 +7,7 @@
                 <span class='icon-bar'></span>
                 <span class='icon-bar'></span>
             </button>
-            <a class='navbar-brand' [routerLink]='["/"]'>test</a>
+            <a class='navbar-brand' [routerLink]='["/"]'> ASR Admin</a>
         </div>
         <div class='clearfix'></div>
         <div class='navbar-collapse collapse' [ngClass]='{ "in": isExpanded }'>
@@ -18,23 +18,13 @@
               </a>
             </li>
             <li [routerLinkActive]='["link-active"]'>
-              <a [routerLink]='["/counter"]' (click)='collapse()'>
-                <span class='glyphicon glyphicon-education'></span> Counter
-              </a>
-            </li>
-            <li [routerLinkActive]='["link-active"]'>
-              <a [routerLink]='["/fetch-data"]' (click)='collapse()'>
-                <span class='glyphicon glyphicon-th-list'></span> Fetch data
-              </a>
-            </li>
-            <li [routerLinkActive]='["link-active"]'>
               <a [routerLink]='["/fetch-room"]' (click)='collapse()'>
-                <span class='glyphicon glyphicon-th-list'></span> Fetch room
+                <span class='glyphicon glyphicon-th-list'></span> Room
               </a>
             </li>
             <li [routerLinkActive]='["link-active"]'>
               <a [routerLink]='["/fetch-slot"]' (click)='collapse()'>
-                <span class='glyphicon glyphicon-th-list'></span> Fetch Slot
+                <span class='glyphicon glyphicon-th'></span> Slot
               </a>
             </li>
           </ul>
