--- a/ClientApp/src/app/Components/fetch-slot/fetch-slot.component.html
+++ b/ClientApp/src/app/Components/fetch-slot/fetch-slot.component.html
@@ -4,27 +4,41 @@
 
 <p *ngIf="!slotList"><em>Loading...</em></p>
 
+<strong> Search by staff: </strong>
+<select (change)="slotByStaff($event.target.value)">
+    <option> Select a staff </option>
+    <option *ngFor="let staff of staffList" value="{{staff.staffID}}">{{staff.staffID}} - {{staff.name}}</option>
+</select>
+<br /><br />
+
+<strong> Search by student: </strong>
+<select (change)="slotByStudent($event.target.value)">
+    <option> Select a student</option>
+    <option *ngFor="let student of studentList" value="{{student.studentID}}">{{student.studentID}} - {{student.name}}</option>
+</select>
+<br /><br />
+
 <table class='table' *ngIf="slotList">
-  <thead>
-    <tr>
-      <th>RoomID</th>
-      <th>Start Time</th>
-      <th>StaffID</th>
-      <th>StudentID</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let slot of slotList">
-      <td>{{ slot.roomID }}</td>
-      <td>{{ slot.startTime }}</td>
-      <td>{{ slot.staffID }}</td>
-      <td>{{ slot.studentID }}</td>
-      <td>
-      <td>
-        <a [routerLink]="['/slot/edit/', slot.roomID, slot.startTime]">Edit</a>
-        <a *ngIf="!slot.studentID" [routerLink]="" (click)="delete(slot.roomID, slot.startTime)"> | Delete</a>
-        <a *ngIf="slot.studentID" [routerLink]="" (click)="cancelBooking(slot.roomID, slot.startTime)"> | Cancel Booking </a>
-      </td>
-    </tr>
-  </tbody>
+    <thead>
+        <tr>
+            <th>RoomID</th>
+            <th>Start Time</th>
+            <th>StaffID</th>
+            <th>StudentID</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let slot of slotList">
+            <td>{{ slot.roomID }}</td>
+            <td>{{ slot.startTime }}</td>
+            <td>{{ slot.staffID }}</td>
+            <td>{{ slot.studentID }}</td>
+            <td>
+            <td>
+                <a [routerLink]="['/slot/edit/', slot.roomID, slot.startTime]">Edit</a>
+                <a *ngIf="!slot.studentID" [routerLink]="" (click)="delete(slot.roomID, slot.startTime)"> | Delete</a>
+                <a *ngIf="slot.studentID" [routerLink]="" (click)="cancelBooking(slot.roomID, slot.startTime)"> | Cancel Booking </a>
+            </td>
+        </tr>
+    </tbody>
 </table>
